--- a/minimum-client.html
+++ b/minimum-client.html
@@ -7,11 +7,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="client.css">
   </head>
   <body>
     <h1 id="header"></h1>
 
-    <script src="client.js"></script>
+    <script src="register_svc_worker.js"></script>
+    <script src="minimum-client.js"></script>
   </body>
 </html>
