Define IPSME MsgEnv API.

--- a/minimum-client.html
+++ b/minimum-client.html
@@ -11,7 +11,10 @@
   <body>
     <h1 id="header"></h1>
 
-    <script src="register_svc_worker.js"></script>
+    <script src="msgenv-broadcast-channel.js"></script>
     <script src="minimum-client.js"></script>
+
+
+    <button onclick="IPSME_MsgEnv_publish('Sausage and worst')">Click me</button> 
   </body>
 </html>
