Make messages idempotent.

--- a/minimum-client.html
+++ b/minimum-client.html
@@ -14,7 +14,6 @@
     <script src="msgenv-broadcast-channel.js"></script>
     <script src="minimum-client.js"></script>
 
-
-    <button onclick="IPSME_MsgEnv_publish('Sausage and worst')">Click me</button> 
+    <button onclick="btn_Click('Sausage and worst')">Sausage and worst</button> 
   </body>
 </html>
